[project]
name = "deepagents-study-demo"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.6.12",
    "langchain-openai>=1.3.3",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.26",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
